Handle localization in campaign creation

--- a/views/create.html
+++ b/views/create.html
@@ -138,41 +138,41 @@
                   <textarea class="form-control" id="abstract" name="abstract" rows="4"></textarea>
                 </div>
                 <div class="form-group">
-                  <label for="abstract">Project Proposal <small>(Markdown Format Supported)</small></label>
+                  <label for="proposal">Project Proposal <small>(Markdown Format Supported)</small></label>
                   <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
                 </div>
               </div>
               <!-- Chinese -->
               <div class="tab-pane fade" id="chinese" role="tabpanel" aria-labelledby="chinese-tab">
                 <div class="form-group">
-                  <label for="abstract">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstract" name="abstract" rows="4"></textarea>
+                  <label for="abstractZH">Project Abstract <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="abstractZH" name="abstractZH" rows="4"></textarea>
                 </div>
                 <div class="form-group">
-                  <label for="abstract">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
+                  <label for="proposalZH">Project Proposal <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="proposalZH" name="proposalZH" rows="4"></textarea>
                 </div>
               </div>
               <!-- Spanish -->
               <div class="tab-pane fade" id="spanish" role="tabpanel" aria-labelledby="spanish-tab">
                 <div class="form-group">
-                  <label for="abstract">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstract" name="abstract" rows="4"></textarea>
+                  <label for="abstractES">Project Abstract <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="abstractES" name="abstractES" rows="4"></textarea>
                 </div>
                 <div class="form-group">
-                  <label for="abstract">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
+                  <label for="proposalES">Project Proposal <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="proposalES" name="proposalES" rows="4"></textarea>
                 </div>
               </div>
               <!-- Japanese -->
               <div class="tab-pane fade" id="japanese" role="tabpanel" aria-labelledby="japanese-tab">
                 <div class="form-group">
-                  <label for="abstract">Project Abstract <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="abstract" name="abstract" rows="4"></textarea>
+                  <label for="abstractJA">Project Abstract <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="abstractJA" name="abstractJA" rows="4"></textarea>
                 </div>
                 <div class="form-group">
-                  <label for="abstract">Project Proposal <small>(Markdown Format Supported)</small></label>
-                  <textarea class="form-control" id="proposal" name="proposal" rows="4"></textarea>
+                  <label for="proposalJA">Project Proposal <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="proposalJA" name="proposalJA" rows="4"></textarea>
                 </div>
               </div>
               <!-- / -->
