Handle multiple recipients

--- a/views/create.html
+++ b/views/create.html
@@ -103,22 +103,22 @@
                 <input required="" type="text" class="form-control" id="amount" name="amount">
               </div>
               <div class="form-group col-lg-4">
-                <label for="image_url">Image URL</label>
-                <input required="" type="text" class="form-control" id="image_url" name="image_url">
+                <label for="image_url[0]">Image URL</label>
+                <input required="" type="text" class="form-control" id="image_url[0]" name="image_url[0]">
               </div>
               <div class="form-group col-lg-4">
-                <label for="recipient_name">Recipient Name</label>
-                <input required="" type="text" class="form-control" id="recipient_name" name="recipient_name">
+                <label for="recipient_name[0]">Recipient Name</label>
+                <input required="" type="text" class="form-control" id="recipient_name[0]" name="recipient_name[0]">
               </div>
             </div>
             <div class="form-row text-muted">
               <div class="form-group col-md-6">
-                <label for="bch_address">Bitcoin Cash Address</label>
-                <input required="" type="text" class="form-control" id="bch_address" name="bch_address">
+                <label for="bch_address[0]">Bitcoin Cash Address</label>
+                <input required="" type="text" class="form-control" id="bch_address[0]" name="bch_address[0]">
               </div>
               <div class="form-group col-md-6">
-                <label for="project_url">Recipient Website</label>
-                <input required="" type="text" class="form-control" id="project_url" name="project_url">
+                <label for="project_url[0]">Recipient Website</label>
+                <input required="" type="text" class="form-control" id="project_url[0]" name="project_url[0]">
               </div>
             </div>
           </div>
