--- a/views/create.html
+++ b/views/create.html
@@ -99,8 +99,8 @@
             <p>Recipient 1</p>
             <div class="form-row text-muted">
               <div class="form-group col-lg-4">
-                <label for="amount">Funding Goal <small>(amount in BCH)</small></label>
-                <input required="" type="text" class="form-control" id="amount" name="amount">
+                <label for="amount[0]">Funding Goal <small>(amount in BCH)</small></label>
+                <input required="" type="number" class="form-control" id="amount[0]" name="amount[0]" step="0.00000001">
               </div>
               <div class="form-group col-lg-4">
                 <label for="image_url[0]">Image URL</label>
