--- a/views/create.html
+++ b/views/create.html
@@ -37,7 +37,7 @@
           <div class="form-row">
             <div class="form-group col-4">
               <label for="start_year">Year</label>
-              <input type="number" class="form-control" id="start_year" name="start_year">
+              <input type="number" class="form-control date-input" id="start_year" name="start_year">
             </div>
             <div class="form-group col-4">
               <label for="start_month">Month</label>
@@ -58,7 +58,7 @@
             </div>
             <div class="form-group col-4">
               <label for="start_day">Day</label>
-              <input type="number" class="form-control" id="start_day" name="start_day">
+              <input type="number" class="form-control date-input" id="start_day" name="start_day">
             </div>
           </div>
           <!-- /Start Date -->
@@ -68,7 +68,7 @@
           <div class="form-row">
             <div class="form-group col-4">
               <label for="end_year">Year</label>
-              <input type="number" class="form-control" id="end_year" name="end_year">
+              <input type="number" class="form-control date-input" id="end_year" name="end_year">
             </div>
             <div class="form-group col-4">
               <label for="end_month">Month</label>
@@ -89,7 +89,7 @@
             </div>
             <div class="form-group col-4">
               <label for="end_day">Day</label>
-              <input type="number" class="form-control" id="end_day" name="end_day">
+              <input type="number" class="form-control date-input" id="end_day" name="end_day">
             </div>
           </div>
           <!-- /End Date -->
@@ -113,7 +113,7 @@
             </div>
             <div class="form-row text-muted">
               <div class="form-group col-md-6">
-                <label for="bch_address[0]">Bitcoin Cash Address</label>
+                <label for="bch_address[0]">Bitcoin Cash Address <small>(include bitcoincash: prefix)</small></label>
                 <input required="" type="text" class="form-control" id="bch_address[0]" name="bch_address[0]">
               </div>
               <div class="form-group col-md-6">
