Add UTC±00:00 note to date inputs

--- a/views/create.html
+++ b/views/create.html
@@ -33,7 +33,7 @@
           <!-- /Title -->
           <hr>
           <!-- Start Date -->
-          <p class="h4">Start Date</p>
+          <p class="h4">Start Date <small>(UTC±00:00)</small></p>
           <div class="form-row">
             <div class="form-group col-4">
               <label for="start_year">Year</label>
@@ -64,7 +64,7 @@
           <!-- /Start Date -->
           <hr>
           <!-- End Date -->
-          <p class="h4">End Date</p>
+          <p class="h4">End Date <small>(UTC±00:00)</small></p>
           <div class="form-row">
             <div class="form-group col-4">
               <label for="end_year">Year</label>
