Fix state issues with docker image

--- a/views/index.html
+++ b/views/index.html
@@ -563,6 +563,6 @@ style="display: flex; justify-content: center; text-align: left;"
 <script src="/static/js/application.js"></script>
 
 <!-- -->
-<audio src="https://backend.flipstarter.cash/snd/applause.mp3" id="applause"></audio>
+<audio src="/static/snd/applause.mp3" id="applause"></audio>
 </body>
 </html>
