Fix typo in preview

--- a/views/index.html
+++ b/views/index.html
@@ -60,7 +60,7 @@
   <meta property="og:title" content="Flipstarter">
   <meta
   property="og:description"
-  content="Fundraiser for Bitcon Cash infrastructure utilizing assurance contracts to ensure fairness."
+  content="Fundraiser for Bitcoin Cash infrastructure utilizing assurance contracts to ensure fairness."
   >
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://www.flipstarter.cash/">
