--- a/views/create.html
+++ b/views/create.html
@@ -127,8 +127,28 @@
           <hr>
           <!-- Markdown files -->
           <p class="h4">Description</p>
-          <div class="row">
-            <nav class="col-md-3 mt-md-5 text-center">
+          <p>Provide your potential investors with in-depth information about your project.
+            <a class="text-nowrap" data-toggle="modal" data-target="#modal-abstract-demo" href="#">
+              <u>Learn more</u>
+            </a>
+          </p>
+          <div class="modal modal-abstract-demo fade" id="modal-abstract-demo" tabindex="-1" role="dialog">
+            <div class="modal-dialog modal-lg" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <div class="h5 mb-0" class="modal-title">Project Abstract + Proposal</div>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body p-0">
+                  <img class="img-fluid" src="/static/img/abstract-proposal.png" width="920" height="800" alt="Project Abstract + Proposal placement example">
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row mt-4">
+            <nav class="col-md-3 mb-3 text-center">
               <div class="nav flex-column nav-pills border rounded" id="nav-tab" role="tablist">
                 <a class="nav-item nav-link active" id="english-tab" data-toggle="tab" href="#english" role="tab" aria-controls="english" aria-selected="true">English 🇬🇧</a>
                 <a class="nav-item nav-link" id="chinese-tab" data-toggle="tab" href="#chinese" role="tab" aria-controls="chinese" aria-selected="false">Chinese 🇨🇳</a>
