Add Arabic translation file

--- a/views/create.html
+++ b/views/create.html
@@ -154,6 +154,7 @@
                 <a class="nav-item nav-link" id="chinese-tab" data-toggle="tab" href="#chinese" role="tab" aria-controls="chinese" aria-selected="false">Chinese 🇨🇳</a>
                 <a class="nav-item nav-link" id="spanish-tab" data-toggle="tab" href="#spanish" role="tab" aria-controls="spanish" aria-selected="false">Spanish 🇪🇸</a>
                 <a class="nav-item nav-link" id="japanese-tab" data-toggle="tab" href="#japanese" role="tab" aria-controls="japanese" aria-selected="false">Japanese 🇯🇵</a>
+                <a class="nav-item nav-link" id="arabic-tab" data-toggle="tab" href="#arabic" role="tab" aria-controls="arabic" aria-selected="false">Arabic 🇸🇦</a>
               </div>
             </nav>
             <div class="col tab-content">
@@ -199,6 +200,17 @@
                 <div class="form-group">
                   <label for="proposalJA">Project Proposal <small>(Markdown Format Supported)</small></label>
                   <textarea class="form-control" id="proposalJA" name="proposalJA" rows="4"></textarea>
+                </div>
+              </div>
+              <!-- Arabic -->
+              <div class="tab-pane fade" id="arabic" role="tabpanel" aria-labelledby="arabic-tab">
+                <div class="form-group">
+                  <label for="abstractAR">Project Abstract <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="abstractAR" name="abstractAR" rows="4"></textarea>
+                </div>
+                <div class="form-group">
+                  <label for="proposalAR">Project Proposal <small>(Markdown Format Supported)</small></label>
+                  <textarea class="form-control" id="proposalAR" name="proposalAR" rows="4"></textarea>
                 </div>
               </div>
               <!-- / -->
