fix Arabic error

--- a/views/index.html
+++ b/views/index.html
@@ -513,6 +513,14 @@ style="display: flex; justify-content: center; text-align: left;"
         >Es</a
         >
       </li>
+      <li>
+        <a
+        class="btn-floating orange darken-2"
+        style="text-align: center;"
+        id="translateArabic"
+        >ar</a
+        >
+      </li>
     </ul>
   </div>
 
